--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -53,7 +53,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
             docker rm -f portfolio
             docker image rm $(docker image ls | grep personal-web | awk '{print $3}')
-            docker run --name portfolio -p 80:80 duyaccel/personal-web:latest
+            docker run --name portfolio -p 80:80 duyaccel/personal-web:main
           '
 
 
