--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -49,8 +49,8 @@ jobs:
 
       - name: Deploy website
         run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+          echo "$SSH_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${SV_USER}@${SERVER} '
             docker rm -f portfolio
             docker image rm $(docker image ls | grep personal-web | awk '{print $3}')
             docker run --name portfolio -p 80:80 duyaccel/personal-web:main
