fix: run container in detached mode...

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -53,7 +53,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${SV_USER}@${SERVER} '
             docker rm -f portfolio
             docker image rm $(docker image ls | grep personal-web | awk '{print $3}') || true
-            docker run --name portfolio -p 80:80 duyaccel/personal-web:main
+            docker run -d --name portfolio -p 80:80 duyaccel/personal-web:main
           '
 
 
