--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -53,8 +53,8 @@ jobs:
         run: |
           echo "$SSH_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${SV_USER}@${SERVER} '
-            docker rm -f portfolio
-            docker image rm $(docker image ls | grep personal-web | awk '{print $3}') || true
+            docker rm -f portfolio || true
+            docker image rm $(docker image ls | grep personal-web | docker image ls -q) || true
             docker run -d --name portfolio -p 80:80 duyaccel/personal-web:main
           '
 
