add blog: portfolio

--- a/devel/hugo.yaml
+++ b/devel/hugo.yaml
@@ -68,7 +68,7 @@ params:
       enable: true
       name: "CV (not available yet)"
       url: "#"
-      download: true
+      download: false
       newPage: false
 
     socialLinks:
